--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<link>
-    <link rel="stylesheet" href="style.css">
 <html>
     <head>
-        <title>exam timer</title>
+        <link rel="stylesheet" href="style.css">
+        <style>
+            body {
+                margin: 0;
+                padding: 0;
+                background-image: url('https://static.vecteezy.com/system/resources/previews/024/573/940/non_2x/one-person-standing-in-the-rain-sheltering-under-umbrella-generated-by-ai-free-photo.jpg');
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-position: center;
+                background-color: darkblue;
+            }
+        </style>
+        <title>Exam Timer</title>
     </head>
     <body>
         <h1>Exam Timer</h1>
+       
     </body>
 </html>
