updates current version

--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="style.css">
-        <style>
-            body {
-                margin: 0;
-                padding: 0;
-                background-image: url('https://static.vecteezy.com/system/resources/previews/024/573/940/non_2x/one-person-standing-in-the-rain-sheltering-under-umbrella-generated-by-ai-free-photo.jpg');
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-position: center;
-                background-color: darkblue;
-            }
-        </style>
-        <title>Exam Timer</title>
-    </head>
-    <body>
-        <h1>Exam Timer</h1>
-       
-    </body>
+<head>
+    <title>Digital Timer</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<h1>Digital timer</h1>
+<p>To help tearchers monitor leaners</p>
+
+<div class="center-container">
+    <button id="startBtn">Start</button>
+</div>
+
+<script>
+    document.getElementById('startBtn').onclick = function() {
+        window.location.href = 'login.html';
+    };
+</script>
+
+</body>
 </html>
