--- a/index.html
+++ b/index.html
@@ -6,18 +6,94 @@
 </head>
 <body>
 
-<h1>Digital timer</h1>
-<p>To help tearchers monitor leaners</p>
+<!-- Simple Login Form -->
+<div id="loginDiv" class="container">
+    <h2>Login</h2>
+    <input type="text" id="username" placeholder="Username"><br>
+    <input type="password" id="password" placeholder="Password"><br>
+    <button id="loginBtn">Login</button>
+    <p id="loginMsg" style="color:red;"></p>
+</div>
 
-<div class="center-container">
-    <button id="startBtn">Start</button>
+<!-- Timer and Student Input (hidden at first) -->
+<div id="timerDiv" class="container" style="display:none;">
+    <h2>Exam Timer</h2>
+    <div id="timer" style="font-size:2em;">00:00:00</div>
+    <input type="text" id="studentNum" placeholder="Enter Student Number"><br><br>
+    <button id="pauseBtn">Pause</button>
+    <button id="doneBtn">Done</button>
+    <button id="homeBtn">Back to Home</button>
+    <p id="doneMsg" style="color:green;"></p>
+</div>
+
+<!-- Student Results (hidden at first) -->
+<div id="resultsDiv" class="container" style="display:none;">
+    <h2>Student Results</h2>
+    <ul id="resultsList"></ul>
+    <button id="logoutBtn">Logout</button>
 </div>
 
 <script>
-    document.getElementById('startBtn').onclick = function() {
-        window.location.href = 'login.html';
-    };
-</script>
+// --- Simple Login Logic ---
+document.getElementById('loginBtn').onclick = function() {
+    // Get username and password values
+    var user = document.getElementById('username').value;
+    var pass = document.getElementById('password').value;
+    // Check if correct
+    if(user === "EDExpo" && pass === "EskomExpo2025") {
+        document.getElementById('loginDiv').style.display = "none";
+        showResults();
+    } else {
+        document.getElementById('loginMsg').innerText = "Wrong username or password!";
+    }
+};
 
-</body>
-</html>
+// --- Timer Variables ---
+let timerInterval;
+let seconds = 0;
+let running = false;
+
+// --- Show Timer Screen ---
+function showTimer() {
+    document.getElementById('timerDiv').style.display = "block";
+    document.getElementById('loginDiv').style.display = "none";
+    document.getElementById('resultsDiv').style.display = "none";
+    resetTimer();
+}
+
+// --- Show Results Screen ---
+function showResults() {
+    document.getElementById('resultsDiv').style.display = "block";
+    document.getElementById('loginDiv').style.display = "none";
+    document.getElementById('timerDiv').style.display = "none";
+    loadResults();
+}
+
+// --- Timer Functions ---
+function startTimer() {
+    if (!running) {
+        running = true;
+        timerInterval = setInterval(function() {
+            seconds++;
+            displayTime();
+        }, 1000);
+    }
+}
+
+function pauseTimer() {
+    running = false;
+    clearInterval(timerInterval);
+}
+
+function resetTimer() {
+    pauseTimer();
+    seconds = 0;
+    displayTime();
+    document.getElementById('studentNum').value = "";
+    document.getElementById('doneMsg').innerText = "";
+}
+
+function displayTime() {
+    let hrs = String(Math.floor(seconds / 3600)).padStart(2, '0');
+    let mins = String(Math.floor((seconds % 3600) / 60)).padStart(2, '0');
+    let secs
